--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -162,12 +162,11 @@
       </ul>
       <div class="footer-bottom">
         <img src="/wedtoan/bt/logo.png" alt="">
-        <p> All Right recived by & copy; creativo 2024</p>
+        <p> All right recived by copy; creative 2024</p>
       </div>
     </footer>
   </body>
 </html>
-
 
 <!--bài 3-->
 <!DOCTYPE html>
@@ -185,6 +184,7 @@
             height: 100vh;
             margin: 0;
             background: lightblue;
+            font-size: 20px;
         }
     </style>
 </head>
